cxxtools (1.2.2) unstable; urgency=low

  * bug fixed: cxxtools::arg does not find user-specific inputstreamoperators

 -- Tommi Maekitalo <tommi@epgmbh.de>  Tue, 14 Dec 2004 11:25:53 +0100

cxxtools (1.2.1) unstable; urgency=low

  * removed obsolete timeclass.cpp
  * switched dl-classes to libtool for better portability
  * skip iconvstream if libiconv is not installed
  * new library: logging-wrapper for log4cplus (log4cxx-support will follow)
  * simple lightweight logging-library as a alternative for log4cplus

 -- Tommi Maekitalo <tommi@tntnet.org>  Fri,  3 Dec 2004 14:04:01 +0100

cxxtools (1.2.0) unstable; urgency=low

  * all classes moved to namespace cxxtools
  * documentation-updates

 -- Tommi Maekitalo <tommi@epgmbh.de>  Tue, 23 Nov 2004 00:02:22 +0100

cxxtools (1.1.3-1) unstable; urgency=low

  * error in eof-handling in base64 fixed

 -- Tommi Maekitalo <tommi@epgmbh.de>  Thu, 11 Nov 2004 12:33:47 +0100

cxxtools (1.1.2-1) unstable; urgency=low

  * new class base64stream

 -- Tommi Maekitalo <tommi@epgmbh.de>  Wed,  3 Nov 2004 20:33:31 +0100

cxxtools (1.1.0-2) unstable; urgency=low

  * make use of libtool/autoconf/automake

 -- Tommi Maekitalo <tommi@epgmbh.de>  Mon,  4 Oct 2004 16:35:02 +0200

cxxtools (1.1) unstable; urgency=low

  *  unused variable in tcpstream.h removed
     this breaks binary-compatibility

 -- Tommi Maekitalo <tommi@epgmbh.de>  Thu, 16 Sep 2004 22:23:03 +0200

cxxtools (1.0-1) unstable; urgency=low

  * Initial Release.

 -- hotspot <hotspot@epgmbh.de>  Tue, 23 Mar 2004 14:07:07 +0100
