@@ -1,0 +1,4 @@
+pkgdata_DATA = cxxtools-log-ldflags
+
+cxxtools-log-ldflags: $(top_builddir)/src/config.h
+	$(ECHO) "@logger_ldflags@" > $@
